Adding new code

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green landyard Construction</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ledger&family=Nixie+One&display=swap" rel="stylesheet">
+    <title>Contact</title>
 </head>
 <body>
     <script>
@@ -68,7 +64,7 @@
             <div class="container clearfix et_menu_container"::after>
                 <div class="logo_container">
                     <span class="logo_helper"></span>
-                    <img src="https://www.Greenlandyc.com/public_html/Images/Greenland-Yard-Construction-Final-logo-med.png" alt="Greenland Yard Construction Logo">
+                    <!-- <img src="" alt="Greenland Yard Construction"> -->
                 </div>
                 <div id="et-top-navigtion" data-height="65" data-fixed-height="40"::after>
                     <nav id="top-menu-nav">
@@ -139,90 +135,9 @@
         <div id="main-content">
             <header>
                 <section>
-                    <h1>Greenland Yard Construction</h1>
-                    <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
+                    <h1>Contact</h1>
                 </section>
             </header>
-            <section>
-                <h2>Information</h2>
-                <article class="centered-main">
-                    <p>Hello my name is Bulmaro and owner of the company. I'm looking for new team members and always welcome new clinets. If you are look for a Job. You can click links at the bottom of the page.</p>
-                    <h2>Our Services</h2>
-                    <h3>Hard Scaping</h3>
-                    <ul>
-                        <li>Pavers</li>
-                        <li>Fencing   (Wood and Vinyl)</li>
-                        <li>Retaining wall</li>
-                        <li>Turff</li>
-                        <li>Sod</li>
-                        <li>Cover Patios</li>
-                        <li>Decks</li>
-                        <li>Pergolas</li>
-                    </ul>
-                    <h3>Handy Man Work</h3>
-                    <ul>
-                        <li>Home Repairs</li>
-                        <li>Renovations</li>
-                        <li>Paint</li>
-                        <li>Trim Work</li>
-                        <li>Door Replacement</li>
-                        <li>Flooring</li>
-                        <li>Tile</li>
-                        <li>Sheet Rock Repair</li>
-                        <li>And Much More...</li>
-                    </ul>
-                </article>
-            </section>
-            <script nitro-exclude>
-                document.cookie = 'nitroCachedPage=' + (!window.NITROPACK_STATE ? '0' : '1') + '; path=/; SameSite=Lax';
-            </script>
-            <script nitro-exclude>
-                if (!window.NITROPACK_STATE || window.NITROPACK_STATE != 'FRESH') {
-                    var proxyPurgeOnly = 0;
-                    if (typeof navigator.sendBeacon !== 'undefined') {
-                        var nitroData = new FormData(); nitroData.append('nitroBeaconUrl', 'aHR0cHM6Ly93d3cubGV3aXNsYW5kc2NhcGUuY29tLw=='); nitroData.append('nitroBeaconCookies', 'W10='); nitroData.append('nitroBeaconHash', 'f5d97ef383f3469e5b40d2231fc3ba7d96b5f4e90d05168788ccd09d2f7feaec15abd7e38e9309accfaldbe134e29807316fd83512a84345183078c701ab92f'); nitroData.append('proxyPurgeOnly', ''); nitroData.append('layout', 'home'); navigator.sendBeacon(location.href, nitroData);
-                    } else {
-                        var xhr = new XMLHttpRequest(); xhr.open('POST', location.href, true); xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded'); xhr.send('nitroBeaconUrl=aHR0cHM6Ly93d3cubGV3aXNsYW5kc2NhcGUuY29tLw==&nitroBeaconCookies=W10=&nitroBeaconHash=f5d97ef383f3469e5b40d2231fc3ba7d96b5f4e90d05168788ccd09d2f7feaec15abd7e38e9309accfaldbe134e29807316fd83512a84345183078c701ab92f&proxyPurgeOnly=&layout=home');
-                    }
-                }
-            </script>
-            <footer id="main-footer" class="nitro-offscreen">
-                <div class="container">
-                    <div id="footer-widgets" class="clearfix"::after>
-                        <div class="footer-widget">
-                            <div id="text-2" class="fwidget et_pb_widget widget_text">
-                                <div class="textwidget">
-                                    <div>
-                                        <a href="https://www.Greenlandyc.com/">Home</a>
-                                        "&nbsp;|&nbsp;"
-                                        <a href="">Photo Gallery</a>
-                                        "&nbsp;|&nbsp;"
-                                        <a href="">Contact</a>
-                                        "&nbsp;|&nbsp;"
-                                        <a href="https://www.Greenlandyc.com/payments.html">Make a Payment</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="footer-bottom">
-                    <div class="container clearfix"::after>
-                        <ul class="et-social-icons">
-                            <li class="et-social-icon et-social-facebook">
-                                <a href="https://www.facebook.com/Greenlandyc2024" class="icon">facebook</a>
-                            </li>
-                            <li class="et-social-icon et-social-tiktok">
-                                <a href="https://www.tiktok.com/Greenlandyc2024" class="icon">tiktok</a>
-                            </li>
-                        </ul>
-                        <div id="footer-info">
-                            "Photos, content and design &copy;2019-2024 Greenland Yard Construction, LLC. All rights reserved. | "
-                            <a href="">Privacy Policy</a>
-                        </div>
-                    </div>
-                </div>
-            </footer>
         </div>
     </div>
     <script nitro-exclude>
@@ -293,45 +208,5 @@
     <script type="speculationrules">
         {"prerender":[{"source":"list","urls":["https://www.Greenlandyc.com/photo_gallery.html"]}]}
     </script>
-    <footer>
-        <section class="centered-main">
-            <h2>Credits</h2>
-            <p>Created By Roy Loera &copy; 1/17/2023</p>
-            <ul>
-                <li>Inspiration from <a href="https://deavita.net/garden-ideas-landscape-design.html">Deavita</a></li>
-            </ul>
-            <h3>Contact Us</h3>
-            <address>
-                You can reach the owner of company <a href="mailto:greenlandyardconstruction@gmail.com">
-                greenlandyardconstruction@gmail</a>. 
-                His phone number is 503-847-1205.<br>
-                Also you can reach me at <a href="mailto:loeraroy279@gmail.com">loeraroy279@gmail.com</a> as well.<br>
-            </address>
-            <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
-                </a>
-            </p>
-            <p>Need a <a href="">Service</a>? Or do need a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLsBPYqOHxeakfCTSstHRYwvfcZEPgaufUeZhXTyC8TymEzQ/viewform">Job</a>?</p>
-            <!-- <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Name:</p>
-                <input id="name">
-            </form>
-            <h2 id="results"></h2>
-            <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Email Address:</p>
-                <input id="emailAddress">
-            </form>
-            <h2 id="results"></h2>
-            <form action="http://example.com/" method="POST">
-                <input type="hidden" name="q" value="a">
-                <p>Other Informtion:</p>
-                <input id="otherInfo">
-                <button type="submit" id="validate">Submite</button>
-            </form> --> 
-        </section>
-    </footer> 
-</body> 
+</body>
 </html>
