Adding new code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ledger&family=Nixie+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.greenlandyc.com">
 </head>
 <body>
     <script>
@@ -68,7 +69,7 @@
             <div class="container clearfix et_menu_container"::after>
                 <div class="logo_container">
                     <span class="logo_helper"></span>
-                    <img src="https://www.Greenlandyc.com/public_html/Images/Greenland-Yard-Construction-Final-logo-med.png" alt="Greenland Yard Construction Logo">
+                    <img src="https://im.ge/i/cnOzQT" alt="Greenland Yard Construction Logo">
                 </div>
                 <div id="et-top-navigtion" data-height="65" data-fixed-height="40"::after>
                     <nav id="top-menu-nav">
