--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.greenlandyc.com">
 </head>
 <body>
     <script>
@@ -64,7 +66,7 @@
             <div class="container clearfix et_menu_container"::after>
                 <div class="logo_container">
                     <span class="logo_helper"></span>
-                    <!-- <img src="" alt="Greenland Yard Construction"> -->
+                    <img src="https://im.ge/i/cnOzQT" alt="Greenland Yard Construction">
                 </div>
                 <div id="et-top-navigtion" data-height="65" data-fixed-height="40"::after>
                     <nav id="top-menu-nav">
