--- a/company history.html
+++ b/company history.html
@@ -16,9 +16,9 @@
         <div id="top-header" class="">
             <div class="container clearfix"::after>
                 <div id="et-info">
-                    <a href="tel:503-847-1205">
+                    <a href="tel:+1-503-847-1205">
                         <span id="et-info-phone"::before>
-                            "503-847-1205"
+                            "+1-503-847-1205"
                         </span>
                     </a>
                     <ul class="et-social-icons">
@@ -62,60 +62,6 @@
                 </div>
             </div>
         </div>
-        <header id="main-header" data-height-onload="50" class="" data-height-loaded="true" data-fixed-height-onload="0">
-            <div class="container clearfix et_menu_container"::after>
-                <div class="logo_container">
-                    <span class="logo_helper"></span>
-                    <img src="https://im.ge/i/cnOzQT" alt="Greenland Yard Construction">
-                </div>
-                <div id="et-top-navigtion" data-height="65" data-fixed-height="40"::after>
-                    <nav id="top-menu-nav">
-                        <ul id="top-menu" class="nav">
-                            <li id="menu-item-133" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-133">
-                                <a href="https://www.Greenlandyc.com/" cursorshover="true">Home</a>
-                            </li>
-                            <li id="menu-item-9781" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9781">
-                                <a href="https://www.Greenlandyc.com/payments.html" cursorshover="true">Payments</a>
-                            </li>
-                            <li id="menu-item-135" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135">
-                                <a href="company history.html" cursorshover="true">Company History</a>
-                            </li>
-                            <li id="menu-item-173" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-173">
-                                <a href="contact.html" cursorshover="true">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div id="et_mobile_nav_menu">
-                        <div class="mobile_nav closed">
-                            <span class="select_page">Select Page</span>
-                            <span class="mobile_menu_bar mobile_menu_bar_toggle"::before></span>
-                            <ul id="mobile_menu" class="et_mobile_menu">
-                                <li id="menu-item-133" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-133 et_first_mobile_item">
-                                    <a href="https://www.Greenlandyc.com/">Home</a>
-                                </li>
-                                <li id="menu-item-9781" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9781">
-                                    <a href="https://www.Greenlandyc.com/payments.html" cursorshover="true">Payments</a>
-                                </li>
-                                <li id="menu-item-135" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-135">
-                                    <a href="company history.html">Company History</a>
-                                </li>
-                                <li id="menu-item-173" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-173">
-                                    <a href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="et_search_outer">
-                <div class="container et_search_form_container">
-                    <form role="search" method="get" class="et-search-form" action="https://www.Greenlandyc.com/">
-                        <input type="search" class="et-search-field" placeholder="Search ..." value name="s" title="Search for:">
-                    </form>
-                    <span class="et_close_search_field"::after></span>
-                </div>
-            </div>
-        </header>
         <div id="et-main-area">
             <div class="et_pb_section header-video et_section_regular">
                 <div class="et_pb_row et-last-child"::after>
@@ -146,7 +92,8 @@
                 <article class="centered-main">
                     <p>In the beginning I was just a chef at George Fox University and it was great an all but I just felt that it was stressing me out and not seeing my kids was another pain. Unfortunately, I quit my Job as chef and started doing landscaping and wife help me out by giving me a push.</p>
                     <h2>The Next Step</h2>
-                    <p>I made this company to acive a goal </p>
+                    <p>I made this company to acive a goal to rise money for my family. When you want to acive your you can do it. 
+                    </p>
                 </article>
             </section>
         </div>
