--- a/payments.html
+++ b/payments.html
@@ -16,9 +16,9 @@
         <div id="top-header" class="">
             <div class="container clearfix"::after>
                 <div id="et-info">
-                    <a href="tel:503-847-1205">
+                    <a href="tel:+1-503-847-1205">
                         <span id="et-info-phone"::before>
-                            "503-847-1205"
+                            "+1-503-847-1205"
                         </span>
                     </a>
                     <ul class="et-social-icons">
@@ -580,7 +580,6 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            
                                         </div>
                                     </div>
                                 </div>
