--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="top-header" class="">
             <div class="container clearfix"::after>
                 <div id="et-info">
-                    <a href="tel:503-847-1205">
+                    <a href="tel:+1-503-847-1205">
                         <span id="et-info-phone"::before>
-                            "503-847-1205"
+                            "+1-503-847-1205"
                         </span>
                     </a>
                     <ul class="et-social-icons">
