Removing sticky header

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </script>
     <div id="main-content">
         <header>
+            <!-- <img src="Images/Greenland-Yard-Construction-Final-logo-sm.png" alt="Greenland Yard Construction Logo"> -->
             <section>
                 <h1>Greenland Yard Construction</h1>
                 <p id="tagline"><i> Greenland Yard Construction is a small Company.</i></p>
