--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Bulmaro Perete">
+    <meta name="description" content=" Greenland Yard Construction is a small Company.">
+    <meta name="keywords" content="Construction, Handy Man Work, Hard Scaping">
     <title>Greenland Yard Construction</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
