Adding temp page

--- a/template.html
+++ b/template.html
@@ -5,6 +5,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greenland Yard Construction</title>
+    <style>
+        /* CSS Reset */
+        body, header, nav, main, footer, h1, h2, h3, div, img, ul, figure, figcaption, section, article {
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+        
+        /* Style rules for body and images */
+        body {
+            background-color: #034101;
+        }
+
+        img {
+            max-width: 100%;
+            display: block;
+        }
+
+        /* Style rule for box sizing applies to all elements */
+        * {
+            box-sizing: border-box;
+        }
+
+        /* Style rules for skip navigation link */
+        .skip {
+            position: absolute;
+            left: -999px;
+        }
+
+        .skip:focus {
+            color: 	#faadad;
+            background-color: #034101;
+            text-decoration: none;
+            padding: 0.5%;
+            top: auto;
+            left: auto;
+            right: 1px;
+            z-index: 1;
+        }
+
+        /* Styles rules for mobile viewport */
+
+        /* Style rule for header */
+        header {
+            top: 0;
+            background-color: #034101;
+            height: 190px;
+        }
+
+        header img {
+            margin: 0 auto;
+        }
+
+        /* Style rules for navigation area */
+        nav {
+            padding: 1%;
+            margin-bottom: 1%;
+        }
+
+        nav ul {
+            list-style-type: none;
+            text-align: center;
+        }
+
+        nav li {
+            font-size: 1.5em;
+            font-family: 'Nixie One', cursive;
+            border-top: 1px solid #034101;
+        }
+
+        nav li:first-child {
+            border-top: none;
+        }
+
+        nav li a {
+            display: block;
+            color: #faadad;
+            padding: 0.5em 1em;
+            text-decoration: none;
+        }
+
+        nav li a:link, a:visited {
+            color: #f28907;
+        }
+
+        nav li a:hover {
+            color: #b6050598;
+        }
+
+        nav li a:active {
+            color: #10c5dd;
+        }
+
+        /* Show mobile class hide tablet-desktop class */
+        .mobile {
+            display: block;
+        }
+
+        .tab-desk {
+            display: none;
+        }
+
+        /* Style rules for main content */
+        main {
+            clear: left;
+            background-color: #00c756;
+            padding: 2%;
+            font-size: 1.15em;
+            font-family: 'Roboto Slab', serif;
+        }
+
+        .mobile h3 {
+            text-shadow: 5px 5px 8px #f2b56b;
+        }
+
+        article {
+            padding: 2%;
+        }
+
+        article h3 {
+            text-align: center;
+        }
+
+        article img {
+            margin: 0 auto;
+        }
+
+        article ul {
+            margin-left: 10%;
+        }
+
+        /* article:nth-child(2) {
+            background-color: rgba(204, 204, 204, 0.3);
+        } */
+
+        .tel-link {
+            background-color: #007c7c;
+            padding: 2%;
+            margin: 0 auto;
+            width: 80%;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        .tel-link a {
+            color: #faadad;
+            text-decoration: none;
+            font-size: 1.5em;
+            display: block;
+        }
+
+        .hours {
+            margin-left: 10%;
+        }
+
+        .action {
+            font-size: 1.35em;
+            color: #666600;
+            
+        }
+    </style>
 </head>
 <body>
 
@@ -29,7 +190,7 @@
 
         <!-- Hero Image -->
         <div id="hero" class="tab-desk">
-            <img src="" alt="Hero Image">
+            <img src="Images/landscape-design-1.jpg" alt="Hero Image">
         </div>
 
         <!-- Use the main area to add the main content of the webpage -->
